ode4j CHANGELOG
---------------

the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MM-DD date format).

------------------------------------------------------------------------------

2009-Dec-07 Tilmann Zaschke
		* Removed @brief tags in javadoc except cpp javadoc.

2009-Nov-30 Tilmann Zäschke
		* Cleaned up argument parsing in demos. 
		* API change: DrawStuff.setOuputNull() -> dsSetOutputNull()

2009-Nov-29 Tilmann Zäschke
		* Fixed bug ID: 2905309 -texturepath ignored, 1st argument ignored 
		* Started cleanup of DrawStuff, mainly regarding setting up
		  version and texture_path

2009-Nov-12 Tilmann Zäschke
		* Frixed crash for DemoCyl in drawstuff

2009-Aug-18 Tilmann Zäschke
		* Javadoc improvements

2009-Aug-12 Tilmann Zäschke
		* Javadoc & API for DBody completed
		* Javadoc & API for DSpace and sub-classes completed
		* Javadoc & API for DGeom and sub-classes completed
		* Fixed and reduced dependencies to .cpp and .internal
		* Fixed Bug#2836288 in DxConvex
		* Javadoc & API for DJoint and sub-classes completed
		* cleaned up javadoc a bit

2009-Aug-10 Tilmann Zäschke
		* Reduced warnings
		* Added @Override labels
		* Javadoc & API for DWorld completed

2009-Jul-22 Tilmann Zäschke
		* Copied javadoc for CppMath API.
		* More API changes in the MATH area.
		  Array, Vector, Martrix and 'v' are not public anymore.

2009-Jul-21 Tilmann Zäschke
		* API changes !!!!!!!!!!!!!!!
		  - DVector3 does not extend DVector anymore
		  - DMatrix3C.get(i) removed
		  - Removed following method:
		  	Matrix.dMultiply0 (DVector3 A, final DMatrix3C B, 
			final DVector3C C, int p, int q, int r)
			-> last arguments removed, assumed to be always 3,3,1.
		  - Matrix.dMultiply0 (DMatrix3 A, final DMatrix3C B, 
			final DMatrix3C C, int p, int q, int r)
		  


2009-Jul-20 Tilmann Zäschke
		* Minor updates